--- a/EnHome.html
+++ b/EnHome.html
@@ -13,7 +13,7 @@
 <h1>Aikun Xu (徐爱昆)</h1>
 </div>
 <table class="imgtable"><tr><td>
-<a href="https://xuaikun.github.io/"><img src="picture/Aikun_Xu.jpg" alt="alt text" width="120px" /></a>&nbsp;</td>
+<a href="https://hongchen.github.io/"><img src="picture/Aikun_Xu.jpg" alt="alt text" width="120px" /></a>&nbsp;</td>
 <td align="left"><p>M.Sc. Student,<br />
 <a href="https://cse.csu.edu.cn/">School of Computer Science and Engineering</a>, <br />
 Computer Building, North Campus, <br />
@@ -132,7 +132,7 @@ the Fundamental Research Funds for the Central Universities of Central South Uni
 </ul>
 <div id="footer">
 <div id="footer-text">
-<br>Page generated 2021-09-18, by <a href="https://xuaikun.github.io/">Aikun Xu</a>.
+<br>Page generated 2021-09-18, by <a href="https://hongchen.github.io/">hong chen</a>.
 </div>
 </div>
 </div>
