--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 </div>
 <table class="imgtable"><tr><td>
 <a href="https://forchchch.github.io/"><img src="picture/hongchen.jpg" alt="alt text" width="120px" /></a>&nbsp;</td>
-<td align="left"><p>2020-now:PhD.candidate, Computer Science, Tsinghua University<br />
+<td align="left"><p>2020-now: PhD.candidate, Computer Science, Tsinghua University<br />
 2016-2020: Bachelor's Degree, Department of Electronic Engineering, Tsinghua University<br />
 e-mail: h-chen20@mails.tsinghua.edu.cn <br />
 <br />
-</a> <a href="https://scholar.google.com/citations?user=-dqI968AAAAJ&hl=zh-CN">[Google Scholar]</a> 
+</a> <a href="https://scholar.google.com/citations?user=nXSn0hAAAAAJ&hl=zh-CN">[Google Scholar]</a> 
   <a href="https://github.com/forchchch">[GitHub]</a></p>
 </td></tr></table>
 <h2>About me</h2>
@@ -31,17 +31,17 @@ e-mail: h-chen20@mails.tsinghua.edu.cn <br />
 </li>
 </ul>
 <ul>
-<li><p><a href="">Auxiliary Learning with Joint Task and Data Scheduling, ICML22</a> <br />
+<li><p><a href="">Auxiliary Learning with Joint Task and Data Scheduling, ICML2022</a> <br />
 <b>Hong Chen</b>, Xin Wang, Chaoyu Guan, Yue Liu, Wenwu Zhu<br />
 </li>
 </ul>
 <ul>
-<li><p><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9428193">Multimodal Disentangled Representation for Recommendation, ICME21</a> <br />
+<li><p><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9428193">Multimodal Disentangled Representation for Recommendation, ICME2021</a> <br />
   Xin Wang, <b>Hong Chen</b> and Wenwu Zhu <br />
 </li>
 </ul>
 <ul>
-<li><p><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9720218">Disentangled Representation Learning for Recommendation, TPAMI22</a> <br />
+<li><p><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9720218">Disentangled Representation Learning for Recommendation, TPAMI2022</a> <br />
 Xin Wang, <b>Hong Chen</b>, Yuwei Zhou, Jianxin Ma and Wenwu Zhu<br />
 </li>
 </ul>
