--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </div>
 <table class="imgtable"><tr><td>
 <a href="https://forchchch.github.io/"><img src="picture/hongchen.jpg" alt="alt text" width="120px" /></a>&nbsp;</td>
-<td align="left"><p>2020-now: PhD.candidate, Computer Science, Tsinghua University<br />
+<td align="left"><p>2020-now: PH.D. candidate, Computer Science, Tsinghua University<br />
 2016-2020: Bachelor's Degree, Department of Electronic Engineering, Tsinghua University<br />
 e-mail: h-chen20@mails.tsinghua.edu.cn <br />
 <br />
@@ -22,12 +22,12 @@ e-mail: h-chen20@mails.tsinghua.edu.cn <br />
   <a href="https://github.com/forchchch">[GitHub]</a></p>
 </td></tr></table>
 <h2>About me</h2>
-<p> Hong Chen received B.E. from the Department of Electronic Engineering, Tsinghua University, Beijing, China in 2020. He is currently a PH.D. candidate in the Department of Computer Sci- ence and Technology of Tsinghua University. His main research interests include machine learning, multimodal information processing. </p>
+<p> Hong Chen received B.E. from the Department of Electronic Engineering, Tsinghua University, Beijing, China in 2020. He is currently a PH.D. candidate in the Department of Computer Sci- ence and Technology of Tsinghua University. His main research interests include automated machine learning, multimodal information processing. </p>
 <h2>Publications</h2>
 
 <ul>
 <li><p><a href="https://papers.nips.cc/paper/2021/file/e242660df1b69b74dcc7fde711f924ff-Paper.pdf">Curriculum Disentangled Recommendation with Noisy Multi-feedback, NeurIPS2021</a> <br />
-<b>Hong Chen</b>, Yudong Chen, Xin Wang1,Ruobing Xie, Rui Wang, Feng Xia, Wenwu Zhu <br />
+<b>Hong Chen</b>, Yudong Chen, Xin Wang,Ruobing Xie, Rui Wang, Feng Xia, Wenwu Zhu <br />
 </li>
 </ul>
 <ul>
