--- a/index.html
+++ b/index.html
@@ -45,6 +45,19 @@ e-mail: h-chen20@mails.tsinghua.edu.cn <br />
 Xin Wang, <b>Hong Chen</b>, Yuwei Zhou, Jianxin Ma and Wenwu Zhu<br />
 </li>
 </ul>
+
+<ul>
+<li><p><a href="https://proceedings.mlr.press/v162/guan22d/guan22d.pdf">Large-Scale Graph Neural Architecture Search, ICML2022</a> <br />
+    Chaoyu Guan, Xin Wang, <b>Hong Chen</b>, Ziwei Zhang, Wenwu Zhu<br />
+</li>
+</ul>
+
+<ul>
+<li><p><a href="https://proceedings.mlr.press/v176/el-baz22a/el-baz22a.pdf">Lessons learned from the NeurIPS 2021 MetaDL challenge:Backbone fine-tuning without episodic meta-learning dominates for few-shot learning image classification, NeurIPS2021 Competition and Demonstration Track</a> <br />
+  Adrian El Baz, Ihsan Ullah, Hong Chen, et al.<br />
+</li>
+</ul>  
+
 <ul>
 <div id="footer">
 <div id="footer-text">
