--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Xin Wang, <b>Hong Chen</b>, Yuwei Zhou, Jianxin Ma and Wenwu Zhu<br />
 
 <ul>
 <li><p><a href="https://proceedings.mlr.press/v176/el-baz22a/el-baz22a.pdf">Lessons learned from the NeurIPS 2021 MetaDL challenge:Backbone fine-tuning without episodic meta-learning dominates for few-shot learning image classification, NeurIPS2021 Competition and Demonstration Track</a> <br />
-  Adrian El Baz, Ihsan Ullah, Hong Chen, et al.<br />
+  Adrian El Baz, Ihsan Ullah, <b>Hong Chen</b>, et al.<br />
 </li>
 </ul>  
 
