add pictures and update publications

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h1>陈虹 (Hong Chen)</h1>
 </div>
 <table class="imgtable"><tr><td>
-<a href="https://forchchch.github.io/"><img src="picture/hongchen.jpg" alt="alt text" width="120px" /></a>&nbsp;</td>
+<a href="https://forchchch.github.io/"><img src="picture/google_scholar4.jpg" alt="alt text" width="120px" /></a>&nbsp;</td>
 <td align="left"><p>2020-now: PH.D. candidate, Computer Science, Tsinghua University<br />
 2016-2020: Bachelor's Degree, Department of Electronic Engineering, Tsinghua University<br />
 e-mail: h-chen20@mails.tsinghua.edu.cn <br />
@@ -53,6 +53,31 @@ Xin Wang, <b>Hong Chen</b>, Yuwei Zhou, Jianxin Ma and Wenwu Zhu<br />
 </ul>
 
 <ul>
+  <li><p><a href="https://dl.acm.org/doi/abs/10.1145/3503161.3548271">Curriculum-NAS: Curriculum Weight-Sharing Neural Architecture Search, ACM MM2022</a> <br />
+    Yuwei Zhou, Xin Wang, <b>Hong Chen</b>, Xuguang Duan, Chaoyu Guan, Wenwu Zhu<br />
+  </li>
+  </ul>
+
+<ul>
+  <li><p><a href="https://dl.acm.org/doi/abs/10.1145/3503161.3548061">Dynamic Spatio-Temporal Modular Network for Video Question Answering, ACM MM2022</a> <br />
+    Zi Qian, Xin Wang, Xuguang Duan, <b>Hong Chen</b>, Wenwu Zhu<br />
+  </li>
+  </ul>
+
+<ul>
+  <li><p><a href="https://dl.acm.org/doi/abs/10.1145/3503161.3548291">AVQA: A Dataset for Audio-Visual Question Answering on Videos, ACM MM2022</a> <br />
+    Pinci Yang, Xin Wang, Xuguang Duan, <b>Hong Chen</b>, Runze Hou, Cong Jin, Wenwu Zhu<br />
+  </li>
+  </ul>
+
+<ul>
+  <li><p><a href="https://dl.acm.org/doi/abs/10.1145/3503161.3548549">CurML: A Curriculum Machine Learning Library, ACM MM2022</a> <br />
+    Yuwei Zhou, <b>Hong Chen</b>, Zirui Pan, Chuanhao Yan, Fanqi Lin, Xin Wang, Wenwu Zhu<br />
+  </li>
+  </ul>
+
+
+<ul>
 <li><p><a href="https://proceedings.mlr.press/v176/el-baz22a/el-baz22a.pdf">Lessons learned from the NeurIPS 2021 MetaDL challenge:Backbone fine-tuning without episodic meta-learning dominates for few-shot learning image classification, NeurIPS2021 Competition and Demonstration Track</a> <br />
   Adrian El Baz, Ihsan Ullah, <b>Hong Chen</b>, et al.<br />
 </li>
@@ -61,7 +86,7 @@ Xin Wang, <b>Hong Chen</b>, Yuwei Zhou, Jianxin Ma and Wenwu Zhu<br />
 <ul>
 <div id="footer">
 <div id="footer-text">
-<br>Page generated 2022-05-26, by <a href="https://forchchch.github.io/">Hong Chen</a>.
+<br>Page generated 2022-10-24, by <a href="https://forchchch.github.io/">Hong Chen</a>.
 </div>
 </div>
 </div>
