update about me

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@ e-mail: h-chen20@mails.tsinghua.edu.cn <br />
   <a href="https://github.com/forchchch">[GitHub]</a></p>
 </td></tr></table>
 <h2>About me</h2>
-<p> Hong Chen received B.E. from the Department of Electronic Engineering, Tsinghua University, Beijing, China in 2020. He is currently a PH.D. candidate in the Department of Computer Sci- ence and Technology of Tsinghua University. His main research interests include automated machine learning, multimodal information processing. </p>
+<p> Hong Chen received B.E. from the Department of Electronic Engineering, Tsinghua University, Beijing, China in 2020. </p>
+<p>He is currently a Ph.D. Candidate in the Department of Computer Science and Technology of Tsinghua University. </p>
+<p>His main research interests include automated machine learning and multimodal information processing. </p>
 <h2>Publications</h2>
 
 <ul>
