update about me

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </div>
 <table class="imgtable"><tr><td>
 <a href="https://forchchch.github.io/"><img src="picture/google_scholar5.jpg" alt="alt text" width="120px" /></a>&nbsp;</td>
-<td align="left"><p>2020-now: PH.D. candidate, Computer Science, Tsinghua University<br />
+<td align="left"><p>2020-now: Ph.D. Candidate, Computer Science, Tsinghua University<br />
 2016-2020: Bachelor's Degree, Department of Electronic Engineering, Tsinghua University<br />
 e-mail: h-chen20@mails.tsinghua.edu.cn <br />
 <br />
