--- a/index.html
+++ b/index.html
@@ -34,10 +34,16 @@ e-mail: h-chen20@mails.tsinghua.edu.cn <br />
 </ul>
 
 <ul>
-<li><p><a href="">Auxiliary Learning with Joint Task and Data Scheduling, ICML2022</a> <br />
+<li><p><a href="https://proceedings.mlr.press/v162/chen22y.html">Auxiliary Learning with Joint Task and Data Scheduling, ICML2022</a> <br />
 <b>Hong Chen</b>, Xin Wang, Chaoyu Guan, Yue Liu, Wenwu Zhu<br />
 </li>
 </ul>
+
+<ul>
+  <li><p><a href="https://openreview.net/pdf?id=x-i37an3uym">Module-Aware Optimization for Auxiliary Learning, NeurIPS2022</a> <br />
+  <b>Hong Chen</b>, Xin Wang, Yue Liu, Yuwei Zhou, Chaoyu Guan, Wenwu Zhu<br />
+  </li>
+  </ul>
 
 <ul>
   <li><p><a href="https://dl.acm.org/doi/abs/10.1145/3503161.3548549">CurML: A Curriculum Machine Learning Library, ACM MM2022</a> <br />
@@ -46,7 +52,7 @@ e-mail: h-chen20@mails.tsinghua.edu.cn <br />
   </ul>
 
 <ul>
-<li><p><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9428193">Multimodal Disentangled Representation for Recommendation, ICME2021</a> <br />
+<li><p><a href="https://ieeexplore.ieee.org/abstract/document/9428193">Multimodal Disentangled Representation for Recommendation, ICME2021</a> <br />
   Xin Wang, <b>Hong Chen</b> and Wenwu Zhu <br />
 </li>
 </ul>
